фигуры почти готовы
проблема с текстом, навожу мышку, а он удаляется....

--- a/index.html
+++ b/index.html
@@ -26,6 +26,31 @@
           </div>
         </div>
         <div class="row">
+          <label class="title">Предметы</label>
+          <ul class="options">
+            <li class="option tool" id="table">
+              <img src="icons/rectangle.svg" alt="">
+              <span>Стол</span>
+            </li>
+            <li class="option tool" id="m">
+              <img src="icons/m.svg" alt="">
+              <span>М</span>
+            </li>
+            <li class="option tool" id="f">
+              <img src="icons/f.svg" alt="">
+              <span>Ж</span>
+            </li>
+            <li class="option tool" id="door">
+              <img src="icons/door.svg" alt="">
+              <span>Дверь</span>
+            </li>
+            <li class="option tool" id="ladder">
+              <img src="icons/ladder.svg" alt="">
+              <span>Лестница</span>
+            </li>
+          </ul>
+        </div>
+        <div class="row">
           <label class="title">Фигуры</label>
           <ul class="options">
             <li class="option tool" id="rectangle">
@@ -62,7 +87,7 @@
               <span>Ластик</span>
             </li>
             <li class="option">
-              <input type="range" id="size-slider" min="1" max="30" value="5">
+              <input type="range" id="size-slider" min="1" max="10" value="1">
             </li>
           </ul>
         </div>
