--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link href="style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>   
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>  
+    <script src="path/to/hammer.min.js"></script>
+ 
   </head>
   <body>
     <div class="container">
@@ -24,6 +26,7 @@
               <input id="H">
             </div>
           </div>
+          <button id="wh">Построить</button>
         </div>
         <div class="row">
           <label class="title">Предметы</label>
