осталось только бд

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link href="style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>  
-    <script src="path/to/hammer.min.js"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
  
   </head>
   <body>
@@ -32,7 +31,7 @@
           <label class="title">Предметы</label>
           <ul class="options">
             <li class="option tool" id="table">
-              <img src="icons/rectangle.svg" alt="">
+              <img src="icons/table.svg" alt="">
               <span>Стол</span>
             </li>
             <li class="option tool" id="m">
