--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <body>
     <div class="container">
       <section class="tools-board">
+        <!--<div class="row" id="stagewhat">
+          <label class="title" id="stage">Этап</label>
+          <label id="what">Что сделать: </label>
+        </div>-->
         <div class="row">
           <label class="title">Размер</label>
           <div id="size">
