--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>JS Mini App</title>
+    <title>Lego</title>
     <link href="style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
- 
+    <!-- <link href="/iconka2.ico" rel="shortcut icon" runat="server" type="image/x-icon" />
+    <link href="/iconka2.ico" rel="icon" runat="server" type="image/ico" /> -->
   </head>
   <body>
     <div class="container">
       <section class="tools-board">
-        <!--<div class="row" id="stagewhat">
-          <label class="title" id="stage">Этап</label>
-          <label id="what">Что сделать: </label>
-        </div>-->
-        <div class="row">
+        <div class="row" id="stagewhat">
+          <label class="title" id="stage">Этап 1</label>
+          <label>Что сделать: </label>
+          <label id="what"></label>
+          <button id="buttonWhat">Готово</button>
+          <button id="buttonWhatObratno">Обратно</button>
+        </div>
+        <div class="row" id="divsize">
           <label class="title">Размер</label>
           <div id="size">
             <div>
@@ -30,6 +34,23 @@
             </div>
           </div>
           <button id="wh">Построить</button>
+        </div>
+        <div class="row" id="rowroom">
+          <label class="title">Элементы</label>
+          <ul class="options room">
+            <li class="option tool" id="room">
+              <img src="icons/rectangle.svg" alt="">
+              <span>Кабинет</span>
+            </li>
+            <li class="option tool" id="door">
+              <img src="icons/door.svg" alt="">
+              <span>Дверь</span>
+            </li>
+            <li class="option tool" id="ladder">
+              <img src="icons/ladder.svg" alt="">
+              <span>Лестница</span>
+            </li>
+          </ul>
         </div>
         <div class="row">
           <label class="title">Предметы</label>
@@ -46,14 +67,7 @@
               <img src="icons/f.svg" alt="">
               <span>Ж</span>
             </li>
-            <li class="option tool" id="door">
-              <img src="icons/door.svg" alt="">
-              <span>Дверь</span>
-            </li>
-            <li class="option tool" id="ladder">
-              <img src="icons/ladder.svg" alt="">
-              <span>Лестница</span>
-            </li>
+            
           </ul>
         </div>
         <div class="row">
