--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="scripts/6room.js" defer></script>
     <script src="scripts/7shift_ctrl.js" defer></script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src='sql-wasm.js'></script>
 
     <link href="iconka.ico" rel="shortcut icon" runat="server" type="image/x-icon" />
     <link href="iconka.ico" rel="icon" runat="server" type="image/ico">
